arch: stingray_defconfig: Enable more input devices.
Change-Id: I051a86f3f5a902f79e58f110a967e934a7b3fa81

--- a/arch/arm/configs/stingray_defconfig
+++ b/arch/arm/configs/stingray_defconfig
@@ -239,6 +239,13 @@ CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
 CONFIG_JOYSTICK_XPAD_FF=y
 CONFIG_JOYSTICK_XPAD_LEDS=y
+CONFIG_INPUT_TABLET=y
+CONFIG_TABLET_USB_ACECAD=y
+CONFIG_TABLET_USB_AIPTEK=y
+CONFIG_TABLET_USB_GTCO=y
+CONFIG_TABLET_USB_HANWANG=y
+CONFIG_TABLET_USB_KBTAB=y
+CONFIG_TABLET_USB_WACOM=y
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_QUANTUM_OBP=y
 CONFIG_INPUT_MISC=y
@@ -307,6 +314,7 @@ CONFIG_NVMAP_CARVEOUT_KILLER=y
 CONFIG_HIDRAW=y
 CONFIG_HID_3M_PCT=y
 CONFIG_HID_A4TECH=y
+CONFIG_HID_ACRUX=y
 CONFIG_HID_APPLE=y
 CONFIG_HID_BELKIN=y
 CONFIG_HID_CANDO=y
@@ -314,8 +322,12 @@ CONFIG_HID_CHERRY=y
 CONFIG_HID_CHICONY=y
 CONFIG_HID_CYPRESS=y
 CONFIG_HID_DRAGONRISE=y
+CONFIG_HID_ELECOM=y
 CONFIG_HID_EZKEY=y
+CONFIG_HID_KEYTOUCH=y
 CONFIG_HID_KYE=y
+CONFIG_HID_UCLOGIC=y
+CONFIG_HID_WALTOP=y
 CONFIG_HID_GYRATION=y
 CONFIG_HID_TWINHAN=y
 CONFIG_HID_KENSINGTON=y
@@ -325,13 +337,18 @@ CONFIG_HID_MICROSOFT=y
 CONFIG_HID_MOSART=y
 CONFIG_HID_MONTEREY=y
 CONFIG_HID_MOTOROLA=y
+CONFIG_HID_MULTITOUCH=y
 CONFIG_HID_NTRIG=y
 CONFIG_HID_ORTEK=y
 CONFIG_HID_PANTHERLORD=y
 CONFIG_HID_PETALYNX=y
 CONFIG_HID_PICOLCD=y
 CONFIG_HID_QUANTA=y
+CONFIG_HID_ROCCAT_ARVO=y
 CONFIG_HID_ROCCAT_KONE=y
+CONFIG_HID_ROCCAT_KONEPLUS=y
+CONFIG_HID_ROCCAT_KOVAPLUS=y
+CONFIG_HID_ROCCAT_PYRA=y
 CONFIG_HID_SAMSUNG=y
 CONFIG_HID_SONY=y
 CONFIG_HID_STANTUM=y
