ARM: tegra: stingray: Print suspend times
Change-Id: Ib10f2aa53e3386941a030259e8ae3ce2b24848f3
Signed-off-by: Todd Poynor <toddpoynor@google.com>

--- a/arch/arm/configs/stingray_defconfig
+++ b/arch/arm/configs/stingray_defconfig
@@ -57,6 +57,7 @@ CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
 CONFIG_WAKELOCK=y
 CONFIG_PM_RUNTIME=y
+CONFIG_SUSPEND_TIME=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
@@ -178,7 +179,6 @@ CONFIG_NL80211_TESTMODE=y
 # CONFIG_CFG80211_WEXT is not set
 CONFIG_CFG80211_ALLOW_RECONNECT=y
 CONFIG_RFKILL=y
-CONFIG_RFKILL_PM=y
 CONFIG_MTD=y
 CONFIG_MTD_PARTITIONS=y
 CONFIG_MTD_CMDLINE_PARTS=y
